# nicepydantic

./: README.md  main.py  pyproject.toml
src/nicepydantic/: __init__.py  demo.py  factory.py  form.py
tests/: test_form.py
